--- a/타입스크립트/2.타입스크립트 설정/index.html
+++ b/타입스크립트/2.타입스크립트 설정/index.html
@@ -218,4 +218,43 @@ const rollDice: DiceRollFn = sides => {}</code></pre></div>
 const add: BinaryFn = (a,b) => a+b;
 const sub: BinaryFn = (a,b) => a-b;
 const mul: BinaryFn = (a,b) => a*b;
-const div: BinaryFn = (a,b) => a/b;</code></pre></div></div></div></div><div class="post-cards-adjacent-wrapper"><div class="post-cards-adjacent"><div class="post-card-adjacent-wrapper"><a class="post-card prev" href="/타입스크립트/1.타입스크립트 알아보기/"><div class="direction">이전 글</div><div class="title">01. 타입스크립트 알아보기</div></a></div><div class="post-card-adjacent-wrapper"></div></div></div></main><footer class="page-footer-wrapper"><p class="page-footer">© <!-- -->2022<!-- --> <a href="https://github.com/sangzun-han">한상준</a> powered by<a href="https://github.com/zoomKoding/zoomkoding-gatsby-blog"> zoomkoding-gatsby-blog</a></p></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/타입스크립트/2.타입스크립트 설정/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-384ea82b9c97dbd7ee60.js"],"app":["/app-f4ec8ffb0d34ba6638e6.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-241020a1cf7d0f317bbe.js"],"component---src-pages-404-js":["/component---src-pages-404-js-18966798326ae6e5a169.js"],"component---src-pages-about-js":["/component---src-pages-about-js-d4a17c8107ec4d45892f.js"],"component---src-pages-index-js":["/component---src-pages-index-js-075b56c20bb45784e0f2.js"],"component---src-templates-blog-template-js":["/component---src-templates-blog-template-js-50baa88fdd75e0f7bfcf.js"],"component---src-templates-category-template-js":["/component---src-templates-category-template-js-d01b478dab935d07b01d.js"]};/*]]>*/</script><script src="/polyfill-384ea82b9c97dbd7ee60.js" nomodule=""></script><script src="/component---src-templates-blog-template-js-50baa88fdd75e0f7bfcf.js" async=""></script><script src="/f9d3028dbef90a6e9b8db85387d63dd9f4edf538-ac5c80044f20d501767d.js" async=""></script><script src="/styles-407fe62976dc5310c43e.js" async=""></script><script src="/app-f4ec8ffb0d34ba6638e6.js" async=""></script><script src="/framework-9086242092609fce62cd.js" async=""></script><script src="/webpack-runtime-2034513abae2e609ffb0.js" async=""></script></body></html>
+const div: BinaryFn = (a,b) => a/b;</code></pre></div>
+<h1 id="7-타입과-인터페이스의-차이점" style="position:relative;"><a href="#7-%ED%83%80%EC%9E%85%EA%B3%BC-%EC%9D%B8%ED%84%B0%ED%8E%98%EC%9D%B4%EC%8A%A4%EC%9D%98-%EC%B0%A8%EC%9D%B4%EC%A0%90" aria-label="7 타입과 인터페이스의 차이점 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>7. 타입과 인터페이스의 차이점</h1>
+<p>타입스크립트에서 named type을 정의하는 방법은 두 가지이다.</p>
+<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">type Tstate = {
+  name: string;
+  capital: string;
+}
+
+interface IState = {
+  name: string;
+  capital: string;
+}</code></pre></div>
+<p>대부분의 경우 타입과 인터페이스 어느것을 선택하여 사용해도 상관없다. 그러나 같은 상황에서는 동일한 방법으로 타입을 정의해 일관성을 유지해야 한다.</p>
+<p>type은 일반적으로 interface보다 쓰임새가 많다. type 키워드는 유니온이 될 수도있고 매핑된 타입 또는 조건부 타입같은 기능에 활용되기도 한다. 튜플과 배열 타입도 type 키워드를 이용해 더 간결하게 표현할 수 있다.</p>
+<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">type Pair = [number,number];
+type StringList = string[];
+type NameNums = [string, ...number[]];</code></pre></div>
+<p>type과 interface는 타입을 확장하는 방법에 차이가 있다. type은 <code class="language-text">&amp;</code>연산자 interface는 <code class="language-text">extends</code>를 이용한다.</p>
+<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">interface IStudent2 extends IStudent  {
+  age: number;
+}
+
+type TStudent2 = TStudent &amp; {
+  age: number;
+}</code></pre></div>
+<p>또한 interface는 동일한 이름으로 다시 interface를 정의해 확장하는것이 가능하다.</p>
+<div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">interface IState {
+  name: string;
+  capital: string;
+}
+
+interface IState {
+  population: number;
+}
+
+const wyoming: IState = {
+  name: "Wyoming",
+  capital: "Cheyenne",
+  population: 500_500;
+}</code></pre></div></div></div></div><div class="post-cards-adjacent-wrapper"><div class="post-cards-adjacent"><div class="post-card-adjacent-wrapper"><a class="post-card prev" href="/타입스크립트/1.타입스크립트 알아보기/"><div class="direction">이전 글</div><div class="title">01. 타입스크립트 알아보기</div></a></div><div class="post-card-adjacent-wrapper"><a class="post-card next" href="/프로젝트/market/"><div class="direction">다음 글</div><div class="title">오픈마켓</div></a></div></div></div></main><footer class="page-footer-wrapper"><p class="page-footer">© <!-- -->2022<!-- --> <a href="https://github.com/sangzun-han">한상준</a> powered by<a href="https://github.com/zoomKoding/zoomkoding-gatsby-blog"> zoomkoding-gatsby-blog</a></p></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/타입스크립트/2.타입스크립트 설정/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-384ea82b9c97dbd7ee60.js"],"app":["/app-f4ec8ffb0d34ba6638e6.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-241020a1cf7d0f317bbe.js"],"component---src-pages-404-js":["/component---src-pages-404-js-18966798326ae6e5a169.js"],"component---src-pages-about-js":["/component---src-pages-about-js-d4a17c8107ec4d45892f.js"],"component---src-pages-index-js":["/component---src-pages-index-js-075b56c20bb45784e0f2.js"],"component---src-templates-blog-template-js":["/component---src-templates-blog-template-js-50baa88fdd75e0f7bfcf.js"],"component---src-templates-category-template-js":["/component---src-templates-category-template-js-d01b478dab935d07b01d.js"]};/*]]>*/</script><script src="/polyfill-384ea82b9c97dbd7ee60.js" nomodule=""></script><script src="/component---src-templates-blog-template-js-50baa88fdd75e0f7bfcf.js" async=""></script><script src="/f9d3028dbef90a6e9b8db85387d63dd9f4edf538-ac5c80044f20d501767d.js" async=""></script><script src="/styles-407fe62976dc5310c43e.js" async=""></script><script src="/app-f4ec8ffb0d34ba6638e6.js" async=""></script><script src="/framework-9086242092609fce62cd.js" async=""></script><script src="/webpack-runtime-2034513abae2e609ffb0.js" async=""></script></body></html>
